--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function myMap() {
 	map: map,
 	title: 'marker',
 	icon: {
-		url: "images/marker1.png",
+		url: "marker1.png",
 		scaledSize: new google.maps.Size(40, 64)
 	}
 });
