--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 <div id="map" class="right" style="width:100%;height:100%"></div>
 
- <script>
- //new marker
-
+<script>
 // Initialize google maps
 function myMap() {
   var myCenter = new google.maps.LatLng(54.687156,25.279651); //latitude&longitude
@@ -26,8 +24,9 @@ function myMap() {
 				position: google.maps.ControlPosition.TOP_CENTER
 			}		
   };
-  var map = new google.maps.Map(mapCanvas, mapOptions);
-  //marker
+var map = new google.maps.Map(mapCanvas, mapOptions);
+   
+//MAIN marker
   var marker = new google.maps.Marker({
 	position: myCenter,
 	map: map,
@@ -36,8 +35,41 @@ function myMap() {
 		url: "marker1.png",
 		scaledSize: new google.maps.Size(40, 64)
 	}
+	
 });
-  marker.setMap(map);
+
+var InfoWindow = new google.maps.InfoWindow({
+		content: '<h1>Centras</h1>'
+});
+marker.addListener('click', function (){
+		InfoWindow.open(map, marker);
+});
+	
+//ADD A MARK
+function addMarker(props){
+		var marker = new google.maps.Marker({
+		position:props.coords,
+		map:map,
+		
+});
+	if(props.iconImage){
+		marker.setIcon(props.iconImage)
+	}
+	if(props.content){
+		var infoWindow = new google.maps.InfoWindow({
+			content: '<input type="text"></input>'
+		});
+		marker.addListener('click', function(){
+			infoWindow.open(map, marker);
+		});
+	}
+	
+}
+//CLICK TO ADD A MARK
+  google.maps.event.addListener(map, 'click', function(event){
+	addMarker({coords:event.latLng,content: '<input type="text"></input>'});
+  });
+marker.setMap(map);
 }
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPo8CC7kvy1TiHeUla5DaTDdhzoVZxRTw&callback=myMap"></script>	
