--- a/index.html
+++ b/index.html
@@ -1,70 +1,109 @@
-<html>
-<head>
-<title>octopuslighthouse</title>
-</head>
-<body>
-<div id="map" class="right" style="width:100%;height:100%"></div>
-<script>
-// Initialize google maps
-function myMap() {
-  var myCenter = new google.maps.LatLng(54.687156,25.279651); //latitude&longitude
-  var mapCanvas = document.getElementById("map");
-  var mapOptions = {
-			//map positioning
-			center: myCenter,
-			zoom: 17,
-			//dropdown map style
-			mapTypeControlOptions:	{
-				style: google.maps.MapTypeControlStyle.DROPDOWN_MENU,
-				position: google.maps.ControlPosition.TOP_CENTER
-			}		
-  };
-var map = new google.maps.Map(mapCanvas, mapOptions);
-//images
-var img = {
-		url: "marker1.png",
-		scaledSize: new google.maps.Size(40, 64)
-	}
-var mark = {
-		url: "mark.png",
-		scaledSize: new google.maps.Size(32, 32)
-}
-//MAIN marker
-  var marker = new google.maps.Marker({
-	position: myCenter,
-	map: map,
-	title: 'marker',
-	icon: img
-	
-});
-//ADD A MARK
-function addMarker(props){
-		var marker = new google.maps.Marker({
-		position:props.coords,
-		map:map,
-		icon: mark
-});
-	if(props.iconImage){
-          marker.setIcon(props.icon);
-        }
-	if(props.content){
-		var infoWindow = new google.maps.InfoWindow({
-			content: '<input type="text"></input>'
-		});
-		marker.addListener('click', function(){
-			infoWindow.open(map, marker);
-		});
-	}
-	
-}
-//CLICK TO ADD A MARK
-  google.maps.event.addListener(map, 'click', function(event){
-	addMarker({coords:event.latLng,content: '<input type="text"></input>' , icon: mark
-	});
-  });
-marker.setMap(map);
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPo8CC7kvy1TiHeUla5DaTDdhzoVZxRTw&callback=myMap"></script>	
-</body>
+<!DOCTYPE html >
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <title>From Info Windows to a Database: Saving User-Added Form Data</title>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map" height="460px" width="100%"></div>
+    <div id="form">
+      <table>
+      <tr><td>Name:</td> <td><input type='text' id='name'/> </td> </tr>
+      <tr><td>Address:</td> <td><input type='text' id='address'/> </td> </tr>
+      <tr><td>Type:</td> <td><select id='type'> +
+                 <option value='bar' SELECTED>bar</option>
+                 <option value='restaurant'>restaurant</option>
+                 </select> </td></tr>
+                 <tr><td></td><td><input type='button' value='Save' onclick='saveData()'/></td></tr>
+      </table>
+    </div>
+    <div id="message">Location saved</div>
+    <script>
+      var map;
+      var marker;
+      var infowindow;
+      var messagewindow;
+
+      function initMap() {
+        var california = {lat: 37.4419, lng: -122.1419};
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: california,
+          zoom: 13
+        });
+
+        infowindow = new google.maps.InfoWindow({
+          content: document.getElementById('form')
+        });
+
+        messagewindow = new google.maps.InfoWindow({
+          content: document.getElementById('message')
+        });
+
+        google.maps.event.addListener(map, 'click', function(event) {
+          marker = new google.maps.Marker({
+            position: event.latLng,
+            map: map
+          });
+
+
+          google.maps.event.addListener(marker, 'click', function() {
+            infowindow.open(map, marker);
+          });
+        });
+      }
+
+      function saveData() {
+        var name = escape(document.getElementById('name').value);
+        var address = escape(document.getElementById('address').value);
+        var type = document.getElementById('type').value;
+        var latlng = marker.getPosition();
+        var url = 'phpsqlinfo_addrow.php?name=' + name + '&address=' + address +
+                  '&type=' + type + '&lat=' + latlng.lat() + '&lng=' + latlng.lng();
+
+        downloadUrl(url, function(data, responseCode) {
+
+          if (responseCode == 200 && data.length <= 1) {
+            infowindow.close();
+            messagewindow.open(map, marker);
+          }
+        });
+      }
+
+      function downloadUrl(url, callback) {
+        var request = window.ActiveXObject ?
+            new ActiveXObject('Microsoft.XMLHTTP') :
+            new XMLHttpRequest;
+
+        request.onreadystatechange = function() {
+          if (request.readyState == 4) {
+            request.onreadystatechange = doNothing;
+            callback(request.responseText, request.status);
+          }
+        };
+
+        request.open('GET', url, true);
+        request.send(null);
+      }
+
+      function doNothing () {
+      }
+
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPo8CC7kvy1TiHeUla5DaTDdhzoVZxRTw&callback=initMap">
+    </script>
+  </body>
 </html>
